kubernetes/netbird/kustomize/base/dashboard.yml
# dashboard
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: netbirdio/dashboard:latest
          ports:
            - containerPort: 80
          command: ["sh", "-c"]
          args:
            - |
              export NETBIRD_MGMT_API_ENDPOINT=https://$NETBIRD_DOMAIN:443
              export NETBIRD_MGMT_GRPC_API_ENDPOINT=https://$NETBIRD_DOMAIN:443
              /usr/bin/supervisord -c /etc/supervisord.conf
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: '0.5'
              memory: 512Mi
