kubernetes/netbird/kustomize/base/deployment.yml
# dashboard
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          #image: wiretrustee/dashboard
          image: netbirdio/dashboard:main
          ports:
            - containerPort: 80
          command: ["sh", "-c"]
          args:
            - |
              export NETBIRD_MGMT_API_ENDPOINT=https://$NETBIRD_DOMAIN:443
              export NETBIRD_MGMT_GRPC_API_ENDPOINT=https://$NETBIRD_DOMAIN:443
              /usr/bin/supervisord -c /etc/supervisord.conf
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: '0.5'
              memory: 512Mi

# coturn
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: coturn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coturn
  template:
    metadata:
      labels:
        app: coturn
    spec:
      hostNetwork: true
      containers:
        - name: coturn
          image: coturn/coturn
          # https://github.com/netbirdio/netbird/blob/main/infrastructure_files/turnserver.conf.tmpl
          args:
            - --user=$TURN_USER:$TURN_PASSWORD
            - --min-port=$TURN_MIN_PORT
            - --max-port=$TURN_MAX_PORT
            - --listening-port=3478
            - --tls-listening-port=5349
            - --cert=/etc/coturn/certs/cert.pem
            - --pkey=/etc/coturn/private/privkey.pem
            - --lt-cred-mech
            - --realm=wiretrustee.com
            - --log-file=stdout
            - --no-cli
            - --fingerprint
            - --lt-cred-mech
            - --no-software-attribute
            - --pidfile="/var/tmp/turnserver.pid"
            # - --verbose
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: '0.5'
              memory: 512Mi
