kubernetes/netbird/kustomize/base/management.yml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: management
spec:
  replicas: 1
  serviceName: management
  selector:
    matchLabels:
      app: management
  template:
    metadata:
      labels:
        app: management
    spec:
      containers:
        - name: management
          image: netbirdio/management
          ports:
            - name: management
              containerPort: 443
          args:
            - --port
            - "443"
            - --log-file
            - console
            - "--disable-anonymous-metrics=$(NETBIRD_DISABLE_ANONYMOUS_METRICS)"
            - --single-account-mode-domain=$(NETBIRD_MGMT_SINGLE_ACCOUNT_MODE_DOMAIN)
            - --dns-domain=$(NETBIRD_MGMT_DNS_DOMAIN)
            - --disable-single-account-mode=$(NETBIRD_MGMT_DISABLE_SINGLE_ACCOUNT_MODE)
          volumeMounts:
            - name: management-storage
              mountPath: /var/lib/netbird
            - name: config-drive
              mountPath: /etc/netbird/management.json
              subPath: management.json # created by init
      volumes:
        - name: config-drive
          emptyDir:
            sizeLimit: 10Mi
        - name: init-scripts
          configMap:
            name: init-scripts
  volumeClaimTemplates:
    - metadata:
        name: management-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 512Mi
